--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query-devtools": "^5.62.2",
+    "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "next": "14.2.19",
+    "react": "18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.0",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
