--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@tanstack/react-query": "^5.62.2",
     "@tanstack/react-query-devtools": "^5.62.2",
     "classnames": "^2.5.1",
@@ -16,7 +17,6 @@
     "next": "14.2.19",
     "next-intl": "^3.25.3",
     "react": "18.3.1",
-    "react-dnd": "^16.0.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
