--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
-    "@reduxjs/toolkit": "^2.4.0",
-    "@tanstack/react-query": "^5.62.2",
+    "@tanstack/react-query": "^5.62.3",
     "@tanstack/react-query-devtools": "^5.62.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "json-server": "^1.0.0-beta.3",
     "next": "14.2.19",
     "next-intl": "^3.25.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
-    "react-modal": "^3.16.1",
-    "react-redux": "^9.1.2"
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/node": "^20",
