--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-select": "^5.8.3",
+    "react-simple-timefield": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
