--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "npx json-server db.json --port 8000 --watch"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -24,7 +25,8 @@
     "react-icons": "^5.4.0",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.3",
-    "react-simple-timefield": "^3.3.1"
+    "react-simple-timefield": "^3.3.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
