--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev-mock": "NEXT_PUBLIC_USE_MOCK=true next dev",
     "dev": "next dev",
+    "server": "npx json-server db.json --port 8000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "server": "npx json-server db.json --port 8000 --watch"
+    "lint": "next lint"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
