Add simple-import-sort ESLint plugin and reorder imports
This commit introduces the eslint-plugin-simple-import-sort for maintaining consistent import ordering. All import statements in various files have been reordered for better organization and readability. Additionally, some unnecessary dev dependencies have been removed from the package-lock.json file.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,37 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
+  "plugins": ["simple-import-sort"],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+
+    "simple-import-sort/imports": [
+      "error",
+      {
+        "groups": [
+          // React and libraries
+          ["^react", "^@?\\w"],
+          // Locale
+          ["^.+locale"],
+          // Components: both relative and absolute
+          ["^.+/components"],
+          // Redux: both relative and absolute
+          ["^.+/redux"],
+          // Functions: both relative and absolute
+          ["^.+/functions"],
+          // const, enums, mock data: both relative and absolute
+          ["^.+(/consts|/BadgeEnums|/DummyContents)"],
+          // Other absolute paths
+          ["^src"],
+          // Other relative paths, including parent imports.
+          ["^\\.\\.(?!/?$)", "^\\.\\./?$"],
+          // One level relative paths
+          ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"],
+          // Side Effects
+          ["^\\u0000"],
+          // Styles
+          ["^.+\\.?(scss)$"]
+        ]
+      }
+    ]
   }
 }
