--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.62.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "json-server": "^1.0.0-beta.3",
     "next": "14.2.19",
     "next-intl": "^3.25.3",
