--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-modal": "^3.16.1",
     "react-select": "^5.8.3",
     "react-simple-timefield": "^3.3.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
